--- a/src/main/resources/ProjectWindow/home.fxml
+++ b/src/main/resources/ProjectWindow/home.fxml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: #26262B;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1047.0" style="-fx-background-color: #26262B;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="issueTableView" layoutX="40.0" layoutY="65.0" prefHeight="500.0" prefWidth="920.0" style="-fx-background-color: null;" stylesheets="@../css/tableview.css" tableMenuButtonVisible="true">
+      <TableView fx:id="issueTableView" layoutX="40.0" layoutY="90.0" prefHeight="544.0" prefWidth="978.0" style="-fx-background-color: null;" stylesheets="@../css/tableview.css" tableMenuButtonVisible="true">
          <columns>
             <TableColumn fx:id="titleColumn" text="Title" />
             <TableColumn fx:id="labelColumn" maxWidth="2000.0" prefWidth="2000.0" text="Label" />
             <TableColumn fx:id="statusColumn" maxWidth="2000.0" prefWidth="2000.0" text="Status" />
             <TableColumn fx:id="assigneeColumn" maxWidth="4000.0" prefWidth="4000.0" text="Assignee" />
-            <TableColumn fx:id="dueDateColumn" prefWidth="75.0" text="Due date" />
+            <TableColumn fx:id="dueDateColumn" prefWidth="5000.0" text="Due date" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="newIssueButton" layoutX="40.0" layoutY="21.0" mnemonicParsing="false" style="-fx-background-color: null;" text="New Issue" textFill="#e7e7e7">
-         <graphic>
-            <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/add.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      <Text fill="#e7e7e7" layoutX="40.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search">
          <font>
-            <Font name="Consolas" size="16.0" />
+            <Font name="Consolas" size="20.0" />
          </font>
-      </Button>
-      <Button fx:id="deleteButton" layoutX="776.0" layoutY="21.0" mnemonicParsing="false" style="-fx-background-color: null;" text="Delete Selected" textFill="#e7e7e7">
-         <graphic>
-            <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/delete.png" />
-               </image>
-            </ImageView>
-         </graphic>
+      </Text>
+      <TextField fx:id="keywordTextField" layoutX="122.0" layoutY="35.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="344.0" promptText="enter key words here" style="-fx-background-color: #555A61; -fx-text-fill: #E7E7E7;">
          <font>
-            <Font name="Consolas" size="16.0" />
+            <Font name="Consolas" size="18.0" />
          </font>
-      </Button>
+      </TextField>
+      <JFXCheckBox fx:id="usernameCheckBox" layoutX="553.0" layoutY="44.0" selected="true" text="username" textFill="#e7e7e7">
+         <font>
+            <Font name="Consolas" size="18.0" />
+         </font>
+      </JFXCheckBox>
+      <JFXCheckBox fx:id="fullNameCheckBox" layoutX="700.0" layoutY="42.0" selected="true" text="Full name" textFill="#e7e7e7">
+         <font>
+            <Font name="Consolas" size="18.0" />
+         </font>
+      </JFXCheckBox>
+      <Text fill="#e7e7e7" layoutX="499.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="In:">
+         <font>
+            <Font name="Consolas" size="20.0" />
+         </font>
+      </Text>
+      <JFXCheckBox fx:id="emailCheckBox" layoutX="861.0" layoutY="42.0" selected="true" text="Email" textFill="#e7e7e7">
+         <font>
+            <Font name="Consolas" size="18.0" />
+         </font>
+      </JFXCheckBox>
    </children>
 </AnchorPane>
