--- a/src/main/resources/ProjectWindow/issue-input.fxml
+++ b/src/main/resources/ProjectWindow/issue-input.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTimePicker?>
 <?import com.jfoenix.controls.JFXToggleButton?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1047.0" style="-fx-background-color: #26262B;" stylesheets="@../css/textfileld.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1047.0" style="-fx-background-color: #26262B;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="1047.0" style="-fx-background-color: #C4C4C4;">
          <children>
@@ -29,21 +30,21 @@
             </TextField>
          </children>
       </AnchorPane>
-      <ScrollPane hbarPolicy="NEVER" prefHeight="457.0" prefWidth="770.0" style="-fx-background-color: #26262B; fx-background: #26262B;" stylesheets="@../css/scrollpane.css" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
+      <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="457.0" prefWidth="770.0" style="-fx-background-color: #26262B; fx-background: #26262B;" stylesheets="@../css/scrollpane.css" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="1047.0">
                <children>
-                  <Text fill="#e7e7e7" layoutX="47.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description:" AnchorPane.leftAnchor="50.0">
+                  <Text fill="#e7e7e7" layoutX="45.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description:" AnchorPane.leftAnchor="45.0">
                      <font>
                         <Font name="Consolas Bold" size="16.0" />
                      </font>
                   </Text>
-                  <TextArea fx:id="descriptionTextArea" layoutX="50.0" layoutY="39.0" prefHeight="200.0" prefWidth="935.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0">
+                  <TextArea fx:id="descriptionTextArea" layoutX="45.0" layoutY="58.0" prefHeight="200.0" prefWidth="935.0" AnchorPane.leftAnchor="45.0" AnchorPane.rightAnchor="55.0">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </TextArea>
-                  <AnchorPane layoutX="418.0" layoutY="294.0" prefHeight="336.0" prefWidth="578.0" style="-fx-border-color: #555A61; -fx-border-radius: 10;" AnchorPane.topAnchor="294.0">
+                  <AnchorPane fx:id="assignPane" layoutX="413.0" layoutY="313.0" prefHeight="336.0" prefWidth="578.0" style="-fx-border-color: #555A61; -fx-border-radius: 10;" AnchorPane.topAnchor="313.0">
                      <children>
                         <Text fill="#e7e7e7" layoutX="26.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assignee:">
                            <font>
@@ -69,19 +70,19 @@
                            </font></TextArea>
                      </children>
                   </AnchorPane>
-                  <JFXToggleButton layoutX="418.0" layoutY="244.0" text="Assignment" textFill="#e7e7e7">
+                  <JFXToggleButton fx:id="assignToggleButton" layoutX="413.0" layoutY="263.0" text="Assignment" textFill="#e7e7e7">
                      <font>
                         <Font name="Consolas Bold" size="16.0" />
                      </font>
                   </JFXToggleButton>
-                  <AnchorPane layoutX="34.0" layoutY="293.0" prefHeight="336.0" prefWidth="330.0" style="-fx-border-color: #555A61; -fx-border-radius: 10;" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="294.0">
+                  <AnchorPane layoutX="45.0" layoutY="313.0" prefHeight="336.0" prefWidth="330.0" style="-fx-border-color: #555A61; -fx-border-radius: 10;" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="313.0">
                      <children>
                         <Text fill="#e7e7e7" layoutX="26.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Label:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="49.1171875">
                            <font>
                               <Font name="Consolas Bold" size="16.0" />
                            </font>
                         </Text>
-                        <JFXComboBox fx:id="labelComboBox" layoutX="27.0" layoutY="78.0" prefHeight="38.0" prefWidth="240.0" style="-fx-border-color: #555A61;" AnchorPane.leftAnchor="26.0" />
+                        <JFXComboBox fx:id="labelComboBox" editable="true" layoutX="27.0" layoutY="78.0" prefHeight="38.0" prefWidth="240.0" style="-fx-border-color: #555A61;" AnchorPane.leftAnchor="26.0" />
                         <Text fill="#e7e7e7" layoutX="25.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="188.1171875">
                            <font>
                               <Font name="Consolas Bold" size="16.0" />
@@ -90,8 +91,13 @@
                         <JFXComboBox fx:id="statusComboBox" layoutX="26.0" layoutY="217.0" prefHeight="38.0" prefWidth="240.0" style="-fx-border-color: #555A61;" />
                      </children>
                   </AnchorPane>
-                  <JFXButton layoutX="321.0" layoutY="675.0" prefHeight="50.0" prefWidth="180.0" stylesheets="@../css/button.css" text="Save" />
-                  <JFXButton layoutX="547.0" layoutY="675.0" prefHeight="50.0" prefWidth="180.0" stylesheets="@../css/cancel-button.css" text="Cancel" />
+                  <JFXButton fx:id="saveButton" layoutX="316.0" layoutY="694.0" prefHeight="50.0" prefWidth="180.0" stylesheets="@../css/button.css" text="Save" />
+                  <JFXButton fx:id="cancelButton" cancelButton="true" layoutX="542.0" layoutY="694.0" prefHeight="50.0" prefWidth="180.0" stylesheets="@../css/cancel-button.css" text="Cancel" />
+                  <Text fx:id="errorText" fill="RED" layoutX="476.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER">
+                     <font>
+                        <Font name="Consolas" size="16.0" />
+                     </font>
+                  </Text>
                </children>
                <padding>
                   <Insets bottom="30.0" />
@@ -100,4 +106,8 @@
         </content>
       </ScrollPane>
    </children>
+   <stylesheets>
+      <URL value="@../css/textfileld.css" />
+      <URL value="@../css/combobox.css" />
+   </stylesheets>
 </AnchorPane>
