--- a/src/main/resources/ProjectWindow/main.fxml
+++ b/src/main/resources/ProjectWindow/main.fxml
@@ -37,7 +37,7 @@
         </rowConstraints>
          <children>
             <AnchorPane fx:id="PaneParent" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-            <VBox fx:id="sidePaneVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="233.0" style="-fx-background-color: #555A61;">
+            <VBox fx:id="sidePaneVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="233.0" style="-fx-background-color: #555A61;" stylesheets="@../css/sidepane-cell.css">
                <children>
                   <JFXButton fx:id="homeButton" buttonType="RAISED" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="233.0" ripplerFill="#788fe2" stylesheets="@../css/sidepane-cell.css" text="Home" VBox.vgrow="NEVER">
                      <font>
@@ -48,6 +48,14 @@
                      </padding>
                   </JFXButton>
                   <JFXButton fx:id="addIssueButton" buttonType="RAISED" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="233.0" ripplerFill="#788fe2" stylesheets="@../css/sidepane-cell.css" text="Add Issue">
+                     <font>
+                        <Font name="Consolas Bold" size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets left="30.0" />
+                     </padding>
+                  </JFXButton>
+                  <JFXButton fx:id="addIssueButton1" buttonType="RAISED" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="233.0" ripplerFill="#788fe2" stylesheets="@../css/sidepane-cell.css" text="Prject Team">
                      <font>
                         <Font name="Consolas Bold" size="16.0" />
                      </font>
