--- a/src/main/resources/MainWindow/main.fxml
+++ b/src/main/resources/MainWindow/main.fxml
@@ -4,6 +4,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -56,21 +59,30 @@
                   </HBox>
                   <HBox fx:id="loggedInHBox" alignment="CENTER_RIGHT" layoutX="11.0" maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="241.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Text fx:id="usernameText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                        <Text fx:id="usernameText" fill="#e7e7e7" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="RIGHT">
                            <font>
-                              <Font name="Consolas Bold" size="18.0" />
+                              <Font name="Consolas" size="16.0" />
                            </font>
-                           <HBox.margin>
-                              <Insets right="15.0" />
-                           </HBox.margin>
                         </Text>
-                        <MenuButton fx:id="userMenuButton" mnemonicParsing="false" style="-fx-background-color: null;" stylesheets="@../css/profileicon.css">
+                        <MenuButton fx:id="userMenuButton" mnemonicParsing="false" style="-fx-background-color: null;" stylesheets="@../css/profileicon.css" textFill="WHITE">
                           <items>
+                              <MenuItem mnemonicParsing="false" text="Change Password" />
+                              <MenuItem mnemonicParsing="false" text="Change Email" />
                             <MenuItem fx:id="logoutMenuItem" mnemonicParsing="false" text="Log out" />
                           </items>
                            <HBox.margin>
                               <Insets right="10.0" />
                            </HBox.margin>
+                           <graphic>
+                              <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../icons/user.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <padding>
+                              <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+                           </padding>
                         </MenuButton>
                      </children>
                   </HBox>
@@ -87,7 +99,7 @@
         </rowConstraints>
          <children>
             <AnchorPane fx:id="PaneParent" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-            <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="233.0" style="-fx-background-color: #555A61;">
+            <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="233.0" style="-fx-background-color: #555A61;" stylesheets="@../css/sidepane-cell.css">
                <children>
                   <JFXButton fx:id="homeButton" buttonType="RAISED" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="233.0" ripplerFill="#788fe2" stylesheets="@../css/sidepane-cell.css" text="Home" VBox.vgrow="NEVER">
                      <font>
@@ -97,6 +109,8 @@
                         <Insets left="30.0" />
                      </padding>
                   </JFXButton>
+                  <ToggleButton mnemonicParsing="false" prefHeight="46.0" prefWidth="234.0" text="Home" />
+                  <ToggleButton mnemonicParsing="false" prefHeight="46.0" prefWidth="234.0" text="Profile" />
                </children>
             </VBox>
          </children>
