--- a/src/main/resources/css/sidepane-cell.css
+++ b/src/main/resources/css/sidepane-cell.css
@@ -8,9 +8,10 @@
 }
 
 .toggle-button {
+    -fx-background-color: null;
     -fx-text-fill: #E7E7E7;
     -fx-alignment: CENTER-LEFT;
-    -fx-font-size: 16px;
+    -fx-font-size: 18px;
     -fx-font-family: Consolas;
     -fx-padding: 0 0 0 30;
 }
