--- a/src/main/resources/popup/member-input.fxml
+++ b/src/main/resources/popup/member-input.fxml
@@ -15,12 +15,12 @@
          </font>
       </Text>
       <TextField fx:id="usernameTextField" layoutX="31.0" layoutY="54.0" prefHeight="30.0" prefWidth="351.0" />
-      <JFXCheckBox fx:id="assignCheckBox" disable="true" layoutX="61.0" layoutY="112.0" stylesheets="@../css/read-only-checkbbox.css" text="Allowed to give Assignment" textFill="#e7e7e7">
+      <JFXCheckBox fx:id="assignCheckBox" layoutX="61.0" layoutY="112.0" text="Allowed to give Assignment" textFill="#e7e7e7">
          <font>
             <Font name="Consolas" size="16.0" />
          </font>
       </JFXCheckBox>
-      <JFXCheckBox fx:id="inviteCheckBox" disable="true" layoutX="61.0" layoutY="154.0" stylesheets="@../css/read-only-checkbbox.css" text="Allowed to manage Team" textFill="#e7e7e7">
+      <JFXCheckBox fx:id="inviteCheckBox" layoutX="61.0" layoutY="154.0" text="Allowed to manage Team" textFill="#e7e7e7">
          <font>
             <Font name="Consolas" size="16.0" />
          </font>
