--- a/src/main/resources/MainWindow/main.fxml
+++ b/src/main/resources/MainWindow/main.fxml
@@ -4,7 +4,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -66,8 +65,6 @@
                         </Text>
                         <MenuButton fx:id="userMenuButton" mnemonicParsing="false" style="-fx-background-color: null;" stylesheets="@../css/profileicon.css" textFill="WHITE">
                           <items>
-                              <MenuItem mnemonicParsing="false" text="Change Password" />
-                              <MenuItem mnemonicParsing="false" text="Change Email" />
                             <MenuItem fx:id="logoutMenuItem" mnemonicParsing="false" text="Log out" />
                           </items>
                            <HBox.margin>
@@ -101,18 +98,9 @@
             <AnchorPane fx:id="PaneParent" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
             <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="233.0" style="-fx-background-color: #555A61;" stylesheets="@../css/sidepane-cell.css">
                <children>
-                  <JFXButton fx:id="homeButton" buttonType="RAISED" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="233.0" ripplerFill="#788fe2" stylesheets="@../css/sidepane-cell.css" text="Home" VBox.vgrow="NEVER">
-                     <font>
-                        <Font name="Consolas Bold" size="18.0" />
-                     </font>
-                     <padding>
-                        <Insets left="30.0" />
-                     </padding>
-                  </JFXButton>
-                  <ToggleButton mnemonicParsing="false" prefHeight="46.0" prefWidth="234.0" text="Home" />
-                  <ToggleButton mnemonicParsing="false" prefHeight="46.0" prefWidth="234.0" text="Profile" />
-               </children>
-            </VBox>
+                  <JFXButton fx:id="homeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="233.0" text="Home" />
+                  <JFXButton fx:id="profileButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="44.0" prefWidth="233.0" text="Profile" />
+               </children></VBox>
          </children>
       </GridPane>
    </children>
