--- a/src/main/resources/css/sidepane-cell.css
+++ b/src/main/resources/css/sidepane-cell.css
@@ -1,26 +1,30 @@
 .button {
     -fx-text-fill: #E7E7E7;
     -fx-alignment: CENTER-LEFT;
+    -fx-background-color: null;
+    -fx-font-size: 18px;
+    -fx-font-family: Consolas;
+    -fx-padding: 0 0 0 30;
 }
 
 .button:focused {
     -fx-background-color: #788fe2;
 }
 
-.toggle-button {
-    -fx-background-color: null;
-    -fx-text-fill: #E7E7E7;
-    -fx-alignment: CENTER-LEFT;
-    -fx-font-size: 18px;
-    -fx-font-family: Consolas;
-    -fx-padding: 0 0 0 30;
-}
+/*.toggle-button {*/
+/*    -fx-background-color: null;*/
+/*    -fx-text-fill: #E7E7E7;*/
+/*    -fx-alignment: CENTER-LEFT;*/
+/*    -fx-font-size: 18px;*/
+/*    -fx-font-family: Consolas;*/
+/*    -fx-padding: 0 0 0 30;*/
+/*}*/
 
-.toggle-button:selected {
-    -fx-background-color: #788fe2;
+/*.toggle-button:selected {*/
+/*    -fx-background-color: #788fe2;*/
 
-}
+/*}*/
 
-.toggle-button:focused {
-    -fx-background-color: #788fe2;
-}
+/*.toggle-button:focused {*/
+/*    -fx-background-color: #788fe2;*/
+/*}*/
